# controllers/book.go
@@ -3,6 +3,7 @@ package controllers
 import (
 	"fmt"
 	"github.com/astaxie/beego"
+	"golang_api/models"
 )
 
 // 书籍信息相关
@@ -10,19 +11,15 @@ type BookController struct {
 	beego.Controller
 }
 
-// @Title 获取推荐书籍信息
+// @Title 首页展示信息
 // @Description create books
 // @Param	token		header 	string	true		"The token is required"
 // @Success 200 {object} models.BookInfo
 // @Failure 403 body is empty
 // @Failure 400 token验证失败
-// @router / [get]
-func (u *BookController) GetInfo() {
-	fmt.Println("书籍信息")
-	u.Data["json"] = map[string]string{
-		"recommends":   "书籍信息",
-		"newBooks":     "书籍信息",
-		"popularBooks": "最受欢迎的书籍"}
+// @router /today [get]
+func (u *BookController) Today() {
+	u.Data["json"] = models.BookInfo()
 	u.ServeJSON()
 }
 
