# swagger/swagger.json
@@ -15,7 +15,7 @@
     },
     "basePath": "/v1",
     "paths": {
-        "/book_info/": {
+        "/book_info/recommend": {
             "get": {
                 "tags": [
                     "book_info"
@@ -47,13 +47,13 @@
                 }
             }
         },
-        "/book_info/recommend": {
+        "/book_info/today": {
             "get": {
                 "tags": [
                     "book_info"
                 ],
                 "description": "create books",
-                "operationId": "BookController.获取推荐书籍信息",
+                "operationId": "BookController.首页展示信息",
                 "parameters": [
                     {
                         "in": "header",
@@ -290,47 +290,7 @@
     "definitions": {
         "models.BookInfo": {
             "title": "BookInfo",
-            "type": "object",
-            "properties": {
-                "author": {
-                    "type": "string"
-                },
-                "bookId": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "bookImage": {
-                    "type": "string"
-                },
-                "content": {
-                    "type": "string"
-                },
-                "createdAt": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "delete": {
-                    "type": "boolean"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "score": {
-                    "type": "integer",
-                    "format": "int32"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "view": {
-                    "type": "integer",
-                    "format": "int32"
-                }
-            }
+            "type": "object"
         },
         "models.LoginInfo": {
             "title": "LoginInfo",
